--- a/source-css/falloutequestria.css
+++ b/source-css/falloutequestria.css
@@ -485,16 +485,18 @@ a[href|="/bjheart"]{   background-position: -200px 0; width: 119px; height: 150p
 a[href|="/bjcontent"]{   background-position: -200px -200px; width: 129px; height: 150px; }
 a[href|="/calamityarmor"]{   background-position: -200px -400px; width: 150px; height: 165px; }
 
-a[href|="/deusmachina"], a[href|="/griffonmerc"]
+a[href|="/deusmachina"], a[href|="/griffonmerc"], a[href|="/sierrascorch"], a[href|="/sierrahug"]
 {
 display: block;
 clear: none;
 float: left;
 background-repeat: no-repeat;
-background-image: url(%%foe-em9-v01%%);
+background-image: url(%%foe-em9-v02%%);
 }
 a[href|="/deusmachina"]{  background-position: 0 0; width: 150px; height: 171px; }
 a[href|="/griffonmerc"]{  background-position: 0 -221px; width: 200px; height: 136px; }
+a[href|="/sierrascorch"]{  background-position: 0 -407px; width: 100px; height: 147px; }
+a[href|="/sierrahug"]{  background-position: 0 -604px; width: 84px; height: 100px; }
 
 a[href|="/advicebj"]
 {
