--- a/source-css/mylittlemango.css
+++ b/source-css/mylittlemango.css
@@ -173,7 +173,7 @@ a.author[href$=V17Ds]:before {
     }
 
 a.author[href$=Captain_Awesomex]:before {
-    content: "Mango Sex Slave";
+    content: "Piece of Shit";
     font-size: 12px;
     }
 
@@ -203,7 +203,7 @@ a.author[href$=romneyfan]:after {
     }
 
 a.author[href$=Captain_Awesomex]:after {
-    content: " Rapeable on Non-Rape Days Only";
+    content: " Hurrdurr I'm a selfish prick";
     color: blue;
     font-size: 10px;
     }
