--- a/source-css/ploungeafterdark.css
+++ b/source-css/ploungeafterdark.css
@@ -1078,3 +1078,15 @@ a.author[href$="Drawlestia"]:after{content:" - Created the Header!"}
 
 /*byebyedownvotes*/
 /*.link .down { display: none; }*/
+
+/*i was dared to do this*/
+.sidecontentbox a.author[href$="AphxTwn666"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
+.sidecontentbox a.author[href$="AphxTwn666"]:before {font-size:12px!important; visibility:visible!important; content: "Flutter"!important}
+.sidecontentbox a.author[href$="Captain_Awesomex"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
+.sidecontentbox a.author[href$="Captain_Awesomex"]:before {font-size:12px!important; visibility:visible!important; content: "Shy"!important}
+.sidecontentbox a.author[href$="SushiSaki"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
+.sidecontentbox a.author[href$="SushiSaki"]:before {font-size:12px!important; visibility:visible!important; content: "Is"!important}
+.sidecontentbox a.author[href$="Isaaccclark"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
+.sidecontentbox a.author[href$="Isaaccclark"]:before {font-size:12px!important; visibility:visible!important; content: "Worst"!important}
+.sidecontentbox a.author[href$="MyNameIsNavy"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
+.sidecontentbox a.author[href$="MyNameIsNavy"]:before {font-size:12px!important; visibility:visible!important; content: "Pony"!important}
