--- a/source-css/pwettypwinkpwincesses.css
+++ b/source-css/pwettypwinkpwincesses.css
@@ -29,7 +29,7 @@ div.titlebox span.word {
 /* Header */
 #header {
 height: 0x; 
-    background: url(%%Twilight%%) no-repeat #FFFFFF;
+    background: url(%%pwettypwinkpumpkinpwincess%%) no-repeat #FFFFFF;
     margin-bottom: 52px;
     background-position: 83% 20px;
     border-bottom: 0px solid #314D5B;
@@ -59,12 +59,12 @@ height: 0x;
 }
 
 #header .pagename.redditname a {
-    background: url(%%animatedheader%%) 0px 0px no-repeat;
+    background: url(%%ssp%%) 0px 0px no-repeat;
     width: 1100px;
     height: 237px;
     display: inline-block;
     position: absolute;
-    left: 100px;
+    left: 5px;
     top: 20px;
     text-indent: -9999px;
     z-index: 100;
