--- a/source-css/spanishmeerkat.css
+++ b/source-css/spanishmeerkat.css
@@ -953,7 +953,7 @@ a[href|="/pinkieistiredofyourshit"] {width:150px;height:149px;background-positio
 
 /* Normal Spritesheet 3 */
 
-a[href|="/rainbowderp"], a[href|="/maudfun"], a[href|="/applegasm"], a[href|="/zecorawooo"], a[href|="/navydash"], a[href|="/navymeerkat"], a[href|="/surpriseddash"], a[href|="/rainbowyeah"], a[href|="/pinkietongue"], a[href|="/ionlywatchitfortheplot"], a[href|="/bedroomeyes"], a[href|="/chryssismile"]
+a[href|="/rainbowderp"], a[href|="/maudfun"], a[href|="/applegasm"], a[href|="/zecorawooo"], a[href|="/navydash"], a[href|="/navymeerkat"], a[href|="/surpriseddash"], a[href|="/rainbowyeah"], a[href|="/pinkietongue"], a[href|="/ionlywatchitfortheplot"], a[href|="/bedroomeyes"], a[href|="/chryssismile"], a[href|="/empressfluttershy"], a[href|="/fluttermistress"], a[href|="/computertwi"], a[href|="/scootaserious"], a[href|="/bedtwi"], a[href|="/fillynmm"]
 {background-image:url(%%normal-spritesheet3%%);display:block;float:left;}
 
 a[href|="/rainbowderp"] {width:131px;height:150px;}
@@ -965,6 +965,11 @@ a[href|="/surpriseddash"], a[href|="/rainbowyeah"] {width:155px;height:200px;bac
 a[href|="/pinkietongue"] {width:116px;height:150px;background-position: -361px 0;}
 a[href|="/ionlywatchitfortheplot"] {width:126px;height:150px;background-position: -477px 0;}
 a[href|="/bedroomeyes"], a[href|="/chryssismile"] {width:206px;height:150px;background-position: -603px 0;}
+a[href|="/empressfluttershy"], a[href|="/fluttermistress"] {width:177px;height:300px;background-position: 0 -350px;}
+a[href|="/computertwi"] {width:249px;height:200px;background-position: -567px -150px;}
+a[href|="/scootaserious"] {width:127px;height:150px;background-position: -809px 0;}
+a[href|="/bedtwi"] {width:144px;height:200px;background-position: -816px -150px;}
+a[href|="/fillynmm"] {width:75px;height:70px;background-position: 0 -650px;}
 
 /* End of Normal Spritesheet 3 */
 
@@ -995,5 +1000,7 @@ a[href|="/ajuberpout"] {width:121px;height:160px;background-position: -242px -16
 
 
 /* Single Emotes */
+
+
 
 /* End of Single Emotes */
