--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -162,9 +162,9 @@ div.over18 .entry .buttons .first{padding-left: 0px}
  padding-bottom: 220px;
  clear:both;
  text-align:center;
- height:500px;
+ height:525px;
  width:100%;
- background-image:url(%%tavitia%%);
+ background-image:url(%%footer525%%);
  background-repeat:no-repeat;
  margin-bottom:-25px;
  background-position: bottom center;
@@ -209,7 +209,7 @@ div.thing.link:first-child:after {
  height: 70px;
  border: 0;
  content: "";
- background:url(%%filly-table%%)
+ background:url(%%nightmarefilly%%)
 }
 
 div.thing.link:first-child[data-fullname$="0"]:after{background-position: 0 0}
@@ -260,7 +260,7 @@ input[name=uh] ~ a:after {
  height: 70px;
  border: 0;
  content: "";
- background:url(%%filly-table%%)
+ background:url(%%nightmarefilly%%)
 }
 
 input[name=uh][value$="0"] ~ a:after {background-position: 0 0}
@@ -315,12 +315,12 @@ input[name=uh][value$="z"] ~ a:after {background-position: -200% -1100%}
 /*Sidebar Filly end*/
 
 
-body{background:url(%%twilightbackground%%) no-repeat fixed center center}
+body{background:url(%%creepaloo-background%%) no-repeat fixed center center}
 .content .md h1{color:#789922;border-bottom:none;padding-bottom:0px}
 .content .md h1:before{content:">"}
 
 .res-nightmode body {
-background: url(%%twilightbackground%%) center center no-repeat fixed #222222 !important;
+background: url(%%creepaloo-background%%) center center no-repeat fixed #222222 !important;
 }
 
 body.res-nightmode div.content {
@@ -617,7 +617,7 @@ a[href|="/applederp"],a[href|="/a39"],a[href|="/rapplederp"],a[href|="/ra39"],a[
 
 
 a[href|="/filly"]
-{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%filly-table%%)!important}
+{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%nightmarefilly%%)!important}
 
 /*Rarity*/
 .usertext input[value$="a"] + .usertext-body a[href="/filly"]{background-position: 0 0}
@@ -1339,18 +1339,18 @@ a.author[href$="HeWho_MustNotBeNamed"]:before {font-size:10px!important; visibil
 
 a.author[href$="DaylightDarkle"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
 a.author[href$="DaylightDarkle"]:before {font-size:10px!important; visibility:visible!important; content: "Pylo"}
-.sidecontentbox a.author[href$="DaylightDarkle"]:before {font-size:12px!important; visibility:visible!important; content: "SnapGracklePop"!important}
 
-.sidecontentbox a.author[href$="DoomedCivilian"] {color: #ff23ff}
+.sidecontentbox a.author[href$="LunarWolves"], .sidecontentbox a.author[href$="DaylightDarkle"], .sidecontentbox a.author[href$="french_guy_al"], .sidecontentbox a.author[href$="DoomedCivilian"]{font-size:0!important; overflow:hidden; display:inline-block; content: "";}
+.sidecontentbox a.author[href$="LunarWolves"]:before {font-size:12px!important; visibility:visible!important; content: "Batman"!important}
+.sidecontentbox a.author[href$="DaylightDarkle"]:before {font-size:12px!important; visibility:visible!important; content: "Scarecrow"!important}
+.sidecontentbox a.author[href$="french_guy_al"]:before {font-size:12px!important; visibility:visible!important; content: "The Riddler"!important}
+.sidecontentbox a.author[href$="DoomedCivilian"]:before {font-size:12px!important; visibility:visible!important; content: "The Joker"!important}
 
 a.author[href$="Peacefulzealot"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
 a.author[href$="Peacefulzealot"]:before {font-size:10px!important; visibility:visible!important; content: "CenturyZellyBelly"}
 
 a.author[href$="ZephyrC"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
-a.author[href$="ZephyrC"]:before {font-size:10px!important; visibility:visible!important; content: "ZephyrC is missing"}
-
-a.author[href$="deathdude223"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
-a.author[href$="deathdude223"]:before {font-size:10px!important; visibility:visible!important; content: "deathdude222"} 
+a.author[href$="ZephyrC"]:before {font-size:10px!important; visibility:visible!important; content: "| ZephyrC |"}
 
 a.author[href$="DoctorBoson"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
 a.author[href$="DoctorBoson"]:before {font-size:10px!important; visibility:visible!important; content: "DucktorBoson"} 
@@ -1363,4 +1363,22 @@ a.author[href$="1125a"]:before {font-size:10px!important; visibility:visible!imp
 
 .sidecontentbox a.author[href$="Pinkie_Pie"] {font-size:0!important; overflow:hidden; display:none; content: "";}
 
+/*Nightmare Stuff*/
+.arrow.upmod, .res.res-nightmode .arrow.upmod {width: 15px; height: 15px; background: url(%%votes%%); background-position: 0 0}
+.arrow.up, .res.res-nightmode .arrow.up {width: 15px; height: 15px; background: url(%%votes%%); background-position: 0 -15px}
+.arrow.down, .res.res-nightmode .arrow.down {width: 15px; height: 15px; background: url(%%votes%%); background-position: 0 -30px}
+.arrow.downmod, .res.res-nightmode .arrow.downmod {width: 15px; height: 15px; background: url(%%votes%%); background-position: 0 -45px}
 
+.pagename a {
+ background: url(%%gothictitle%%);
+ background-repeat: no-repeat;
+ display: block;
+ position: absolute;
+ top: -5px;
+ left: -120px;
+ width: 122px;
+ height: 26px;
+ text-indent: -9999px;
+ }
+#header {background: #FF9100}
+a#header-img-a {padding-right: 80px}
